fixed some bugs and updated to work with JDK17